after 22 dec full
Limit the number of solutions to 5
Add last 5 solutions and one common solution (0.9 similarity)
No more eventhandler
stop 2 seconds before timeout (time penalty worse than gap penalty)
(big effect expected) var history set pseudocost count to 4
--- 25 dec full ---
Provide no solution
--- 26 dec small10 ---
Revert the no solution part
Solution hiniting is now a parameter. Impact factor 0.8
--- 26 dec full ---
Solution hiniting Impact factor 0.7
maxcuts impact factor 0.7
--- 27 dec full ---
Don't update scores for the first instance.
Force attempt all values till count 5 in parameters
--- 28 dec full ---
New branching rule. 20% with 0.9 cost_update_factor
Fix penalty on unsuccessfull hint.
hint success stats
